
add_executable(demo_I demo_I.cpp)            
add_executable(demo_boxstack demo_boxstack.cpp)
add_executable(demo_buggy demo_buggy.cpp)
add_executable(demo_cards demo_cards.cpp)
add_executable(demo_chain2 demo_chain2.cpp)
add_executable(demo_collision demo_collision.cpp)
add_executable(demo_crash demo_crash.cpp)
add_executable(demo_cyl demo_cyl.cpp)
add_executable(demo_cylvssphere demo_cylvssphere.cpp)
add_executable(demo_dball demo_dball.cpp)
add_executable(demo_dhinge demo_dhinge.cpp)
add_executable(demo_feedback demo_feedback.cpp)
add_executable(demo_friction demo_friction.cpp)
add_executable(demo_gyroscopic demo_gyroscopic.cpp)
add_executable(demo_heightfield demo_heightfield.cpp)
add_executable(demo_hinge demo_hinge.cpp)
add_executable(demo_jointPR demo_jointPR.cpp)
add_executable(demo_jointPU demo_jointPU.cpp)
add_executable(demo_joints demo_joints.cpp)
add_executable(demo_kinematic demo_kinematic.cpp)
add_executable(demo_motion demo_motion.cpp)
add_executable(demo_motor demo_motor.cpp)
add_executable(demo_moving_convex demo_moving_convex.cpp)
add_executable(demo_moving_trimesh demo_moving_trimesh.cpp)
add_executable(demo_ode demo_ode.cpp)
add_executable(demo_piston demo_piston.cpp)
add_executable(demo_plane2d demo_plane2d.cpp)
add_executable(demo_slider demo_slider.cpp)
add_executable(demo_space demo_space.cpp)
add_executable(demo_space_stress demo_space_stress.cpp)
add_executable(demo_step demo_step.cpp)
add_executable(demo_tracks demo_tracks.cpp)
add_executable(demo_trimesh demo_trimesh.cpp)

set(DRAWSTUFF_LIBRARIES drawstuff)
set(ODE_LIBRARIES ode)

target_link_libraries(demo_I ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_boxstack ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_buggy ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_cards ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_chain2 ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_collision ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_crash ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_cyl ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_cylvssphere ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_dball ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_dhinge ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_feedback ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_friction ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_gyroscopic ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_heightfield ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_hinge ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_jointPR ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_jointPU ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_joints ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_kinematic ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_motion ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_motor ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_moving_convex ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_moving_trimesh ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_ode ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_piston ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_plane2d ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_slider ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_space ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_space_stress ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_step ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_tracks ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
target_link_libraries(demo_trimesh ${ODE_LIBRARIES} ${DRAWSTUFF_LIBRARIES})
